# ReceiptSorter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COPYRIGHT-HEADER.txt  Dockerfile  Format_Preview.xlsx  LICENSE  PROGRESS.md  README.md  ROADMAP.md  categorizer.py  config.py  data_extractor.py  debug_models.py  docker-compose.yml  file_organizer.py  generate_preview.py  main.py  pdf_processor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_web.py  setup.sh  spreadsheet_manager.py  start_app.command  test_setup.py
.github/: dependabot.yml
.github/workflows/: ci-docker.yml  ci-macos.yml  ci-python.yml  release.yml
docs/: CI-CD.md  QUICKSTART.md  README.md
docs/adr/: 001-standard-swiftui-adoption.md
docs/plans/: liquid-glass-design-adoption.md  model-predownload-on-launch.md
docs/rfc/: liquid-glass-design-adoption.md  model-predownload-on-launch.md
docs/superpowers/plans/: 2026-04-22-correction-learning.md  2026-04-22-gemma4-migration.md
docs/superpowers/specs/: 2026-04-22-correction-learning-design.md  2026-04-22-gemma4-migration-design.md
macos/: Package.resolved  Package.swift  project.yml
macos/Receipt Sorter.app/Contents/: Info.plist
macos/Receipt Sorter.app/Contents/_CodeSignature/: CodeResources
macos/ReceiptSorterIcon.icon/: icon.json
macos/Resources/: AppIcon.icns
macos/Sources/ReceiptCLI/: main.swift
macos/Sources/ReceiptSorterApp/: ContentView.swift  DuplicateReviewView.swift  EditableDataCard.swift  Info.plist  LegacySettingsView.swift  ModelDownloadBanner.swift  ModernSettingsView.swift  OnboardingView.swift  PDFKitView.swift  ReceiptSorterApp.entitlements  ReceiptSorterApp.swift  SettingsView.swift  WelcomeView.swift
macos/Sources/ReceiptSorterApp/DesignSystem/Components/: LGButton.swift  LGCard.swift  LGDataCard.swift  LGGroupBox.swift  LGProcessingItemRow.swift  LGSidebar.swift  LGTextField.swift  LGWelcomeView.swift
macos/Sources/ReceiptSorterApp/DesignSystem/LiquidGlass/: Animations.swift  Colors.swift  Materials.swift  Shadows.swift  Typography.swift
macos/Sources/ReceiptSorterCore/: AuthService.swift  CorrectionStore.swift  ExcelService.swift  FileOrganizationService.swift  GeminiService.swift  GemmaModel.swift  LocalLLMService.swift  ModelDownloadService.swift  OCRService.swift  ReceiptDataExtractor.swift  ReceiptSorterCore.swift  SheetService.swift  TaxCategories.swift
macos/Tests/ReceiptSorterCoreTests/: ModelDownloadServiceTests.swift  ReceiptSorterCoreTests.swift
macos/scripts/: bundle.sh  bundle_local.sh  generate_icon.py  notarize.sh  update_icon.sh
src/receipt_sorter/: categorizer.py  config.py  data_extractor.py  file_organizer.py  google_sheets_manager.py  main.py  pdf_processor.py  spreadsheet_manager.py
src/receipt_sorter/web/: app.py
src/receipt_sorter/web/templates/: index.html  results.html  review.html  settings.html  setup.html  sync_results.html
tests/: test_google_sheets.py  test_setup.py
