[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt_sorter"
version = "0.1.0"
description = "A tool to organize receipt PDFs and images."
readme = "README.md"
authors = [{ name = "OJDavis" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pdfplumber==0.11.0",
    "pypdf2==3.0.1",
    "pytesseract==0.3.10",
    "Pillow",
    "google-generativeai>=0.3.0",
    "openpyxl==3.1.2",
    "pandas==2.2.2",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0",
    "gspread==6.1.0",
    "google-auth==2.29.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
]
requires-python = ">=3.9"

[project.scripts]
receipt-sorter = "receipt_sorter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | macos
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "macos",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"test_*.py" = ["B011"]    # assert False

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    "build",
    "dist",
    "macos",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "macos"]
skips = ["B101", "B601"]
